--- a/_config.yml
+++ b/_config.yml
@@ -36,17 +36,17 @@ timezone: Asia/Shanghai  # see https://en.wikipedia.org/wiki/List_of_tz_database
 author:
   type      : # "person" (default), "organization"
   name      : 羽毛
-  url       :
-  avatar    : # path or url of avatar image
-  bio       : I am an amazing person.
-  email     :
+  url       : 
+  avatar    : http://www.meng8023.com/assets/favicon.ico # path or url of avatar image
+  bio       : 一个苦逼程序员.
+  email     : 121093188@qq.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
   googleplus: # "user_id"   the last part of your profile url, e.g. https://plus.google.com/u/0/user_id
   weibo     : # "user_id"   the last part of your profile url, e.g. https://www.weibo.com/user_id/profile?...
   douban    : # "user_name" the last part of your profile url, e.g. https://www.douban.com/people/user_name/
   linkedin  : # "user_name" the last part of your profile url, e.g. https://www.linkedin.com/in/user_name/
-  github    : # "user_name" the last part of your profile url, e.g. https://github.com/user_name
+  github    : https://github.com/meng8023 # "user_name" the last part of your profile url, e.g. https://github.com/user_name
   npm       : # "user_name" the last part of your profile url, e.g. https://www.npmjs.com/~user_name
   telegram  : # "user_name" the last part of your profile url, e.g. https://t.me/user_name
 
