--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
-baseurl : # does not include hostname
+baseurl : "/meng8023.github.io" # does not include hostname
 title   : 博客
 description: > # this means to ignore newlines until "Language & timezone"
   Your Site Description
@@ -38,7 +38,7 @@ author:
   name      : 羽毛
   url       : 
   avatar    : http://www.meng8023.com/assets/favicon.ico # path or url of avatar image
-  bio       : 一个苦逼程序员.
+  bio       : 一个苦逼程序员
   email     : 121093188@qq.com
   facebook  : # "user_name" the last part of your profile url, e.g. https://www.facebook.com/user_name
   twitter   : # "user_name" the last part of your profile url, e.g. https://twitter.com/user_name
@@ -53,7 +53,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: meng8023/meng8023.github.io
 repository_tree: master
 
 
@@ -79,40 +79,40 @@ toc:
   selectors: # "h1,h2,h3" (default)
 
 
-## => Markdown Enhancements
+## => Markdown Enhancements(增强)
 ##############################
 ## Mathjax
-mathjax: # false (default), true
-mathjax_autoNumber: # false (default), true
+mathjax: true  # false (default), true
+mathjax_autoNumber: true  # false (default), true
 
 ## Mermaid
-mermaid: # false (default), true
+mermaid: true  # false (default), true
 
 ## Chart
-chart: # false (default), true
+chart: true  # false (default), true
 
 
-## => Paginate
+## => Paginate（分页设置）
 ##############################
 paginate: 8
 paginate_path: /page:num # don't change this unless for special need
 
 
-## => Sources
+## => Sources（CDN源）
 ##############################
 sources: # bootcdn (default), unpkg
 
 
-## => Sharing
+## => Sharing (分享)
 ##############################
 sharing:
-  provider: false # false (default), "addtoany"
+  provider: "addtoany" # false (default), "addtoany"
 
 
 ## => Comments
 ##############################
 comments:
-  provider: false # false (default), "disqus", "gitalk", "custom"
+  provider: "gitalk" # false (default), "disqus", "gitalk", "custom"
 
   ## Disqus
   disqus:
