--- a/_config.yml
+++ b/_config.yml
@@ -121,11 +121,11 @@ comments:
   ## Gitalk
   # please refer to https://github.com/gitalk/gitalk for more info.
   gitalk:
-    clientID    : # GitHub Application Client ID
-    clientSecret: # GitHub Application Client Secret
-    repository  : # GitHub repo
-    owner       : # GitHub repo owner
-    admin: # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
+    clientID    : c61696f67c018abdfc09   # GitHub Application Client ID
+    clientSecret: 139f06d8355fc40410eb8fe494df133d3ca3c8dc  # GitHub Application Client Secret
+    repository  : blogs # GitHub repo
+    owner       : meng8023  # GitHub repo owner
+    admin: meng8023  # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
 
 
