--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url     : # the base hostname & protocol for your site e.g. https://www.someone.
 baseurl : "/meng8023.github.io" # does not include hostname
 title   : 博客
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  羽毛的技术博客
 
 
 ## => Language and Timezone
