--- a/_data/locale.yml
+++ b/_data/locale.yml
@@ -5,10 +5,10 @@ NAV:
     zh-Hans: "主页"
     zh-Hant: "主頁"
   ALL:
-    en:      "Archive"
-    zh:      "归档"
-    zh-Hans: "归档"
-    zh-Hant: "歸檔"
+    en:      "ALL"
+    zh:      "全部"
+    zh-Hans: "全部"
+    zh-Hant: "全部"
   RSS:
     en:      "RSS"
     zh:      "RSS"
