--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ comments:
   gitalk:
     clientID    : c61696f67c018abdfc09   # GitHub Application Client ID
     clientSecret: 139f06d8355fc40410eb8fe494df133d3ca3c8dc  # GitHub Application Client Secret
-    repository  : 'blogs' # GitHub repo
+    repository  : 'meng8023.github.io' # GitHub repo
     owner       : 'meng8023'  # GitHub repo owner
     admin: ['meng8023']  # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
     id：'window.location.pathname'
