--- a/_config.yml
+++ b/_config.yml
@@ -121,10 +121,10 @@ comments:
   ## Gitalk
   # please refer to https://github.com/gitalk/gitalk for more info.
   gitalk:
-    clientID    : c61696f67c018abdfc09   # GitHub Application Client ID
-    clientSecret: 139f06d8355fc40410eb8fe494df133d3ca3c8dc  # GitHub Application Client Secret
-    repository  : 'blogs' # GitHub repo
-    owner       : 'meng8023'  # GitHub repo owner
+    clientID    : "c61696f67c018abdfc09"   # GitHub Application Client ID
+    clientSecret: "139f06d8355fc40410eb8fe494df133d3ca3c8dc"  # GitHub Application Client Secret
+    repository  : "meng8023.github.io" # GitHub repo
+    owner       : "meng8023"  # GitHub repo owner
     admin: ['meng8023']  # GitHub repo owner and collaborators, only these guys can initialize GitHub issues, IT IS A LIST.
       # - your GitHub Id
 
